# django-recipes

./: .dockerignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
DjangoRecipes/: settings.py  urls.py  wsgi.py
Frontend/react-recipes/: package-lock.json  package.json
Frontend/react-recipes/public/: index.html
Frontend/react-recipes/src/: App.js
WebRecipes/: admin.py  apps.py  models.py  views.py
WebRecipes/migrations/: 0001_initial.py  0002_auto_20190709_1650.py
django-recipes/: settings.py  urls.py  wsgi.py
django_recipes/: settings.py  urls.py
recipes/: admin.py  apps.py  models.py  serializers.py  urls.py
recipes/migrations/: 0001_initial.py  0002_auto_20190709_1650.py
