[tool.poetry]
name = "django-recipes"
version = "0.1.0"
description = ""
authors = ["Pablo Rodríguez Guillén <pablorodriguezguillen@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.6"
django = "2.2.10"
django-cors-headers = "3.0.2"
djangorestframework = "3.10.1"
pytz = "2019.3"
sqlparse = "0.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
